# torchplugins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-info.json.in
.github/workflows/: build.yaml  release.yaml
extras/: basic.maxpat  iir-modal.maxpat
src/common/test/: CMakeLists.txt  main.cpp
src/common/test_torchwrapper/: CMakeLists.txt  main.cpp
src/common/torchwrapper/: CMakeLists.txt  PytorchFrontend.cpp  model.cpp
src/common/torchwrapper/include/: PytorchFrontend.h  ShapeFFT.h  log.h  model.h
src/maxmsp/encoder/: CMakeLists.txt  encoder.cpp  encoder.maxhelp
src/maxmsp/fc/: CMakeLists.txt  fc.cpp  fc.maxhelp  fc_test.cpp
src/maxmsp/filterbank_tilde/: CMakeLists.txt  filterbank_tilde.cpp  filterbank_tilde_test.cpp  filterbank~.maxhelp
